--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Values for this workshop - EDIT THIS SECTION.
 #--------------------------------------------------------------------------------
 workshop_repo   : "http://github.com/aandrew1/2015-12-07-08-Antarctica"
-workshop_site   : "http://swcarpentry.github.io/2015-12-07-08-Antarctica"
+workshop_site   : "http://aandrew1.github.io/2015-12-07-08-Antarctica"
 #--------------------------------------------------------------------------------
 # Standard Software Carpentry settings - should not need to be modified.
 #--------------------------------------------------------------------------------
